# mobilerobot_metapackage

./: .gitmodules
bt3000_teleop_joy/: CMakeLists.txt  package.xml
bt3000_teleop_joy/config/: bt3000_config.yaml
bt3000_teleop_joy/launch/: teleop.launch
bt3000_teleop_joy/src/: bt3000_teleop_joy_node.cpp  cbt3000_teleop_joy.cpp
dynamixel_hardware_msgs/: CMakeLists.txt  package.xml
dynamixel_hardware_msgs/msg/: DynamixelControlTable.msg
dynamixel_hardware_msgs/srv/: GetDynamixelControlTable.srv  TorqueOnOff.srv
manipulator_moveit_config/: .setup_assistant  package.xml
manipulator_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  mobilerobot.srdf  ros_controllers.yaml  sensors_3d.yaml
manipulator_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  manipulator_pro_moveit.launch  moveit.rviz  (+7 more)
mecanum_wheel_controller/: CMakeLists.txt  mecanum_wheel_controller_plugins.xml  package.xml
mobile_robot/: package.xml
mobilerobot_bringup/: CMakeLists.txt  package.xml
mobilerobot_control/: CMakeLists.txt  package.xml
mobilerobot_control/config/: mecanum_wheel_controller.yaml
mobilerobot_control/include/mobilerobot_control/: cmecanum_wheel_controller.h  codometry.h
mobilerobot_control/launch/: mecanum_wheel_controller_load.launch
mobilerobot_control/src/: cmecanum_wheel_controller.cpp  codometry.cpp  cspeed_limiter.cpp
mobilerobot_description/: CMakeLists.txt  Readme.md  package.xml
mobilerobot_navigation/: CMakeLists.txt  package.xml
urg_launch/: 99-hokuyo_urg.rules  CMakeLists.txt  package.xml
(+53 files in other folders)
