<?xml version="1.0"?>
<package format="2">
  <name>mobilerobot_control</name>
  <version>0.0.0</version>
  <description>The mobilerobot_control package</description>

  <maintainer email="gp62@todo.todo">gp62</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>realtime_tools</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>urdf</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/mecanum_wheel_controller_plugins.xml"/>
  </export>
</package>
